Small changes for icons

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-      "name": "Workblox Landing Page Design",
+      "name": "Workblox",
       "version": "0.1.0",
       "private": true,
       "lint-staged": {
