--- a/package.json
+++ b/package.json
@@ -56,12 +56,13 @@
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
-            "react-hook-form": "^7.52.2",
+            "react-hook-form": "^7.71.1",
             "react-icons": "^4.10.1",
             "react-resizable-panels": "^2.1.7",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
+            "use-mailchimp-form": "^3.2.0",
             "vaul": "^1.1.2",
             "zod": "^3.22.4"
       },
